[package]
name = "conch_calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "conch_calendar"

[dependencies]
chrono = { version = "0" }
lazy_static = { version = "1" }
conch_ansi = { path = "../conch_ansi" }
