[package]
name = "conch_split"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "conch_split"

[dependencies]
conch_base_models = { path = "../conch_base_models" }
conch_ansi = { path = "../conch_ansi" }
conch_macros = { path = "../conch_macros" }
